pass answers as flag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div id="myapp"></div>
     <script>
         var app = Elm.Main.init({
-            node: document.getElementById('myapp')
+            node: document.getElementById('myapp'),
+            flags: { "answers": ["siege", "tiger", "banal"] }
         });
     </script>
 </body>
