--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
-    <script src="answers.js"></script>
+    <script src="wordListEnglish.js"></script>
     <script src="main.js"></script>
 </head>
 
@@ -19,7 +19,7 @@
         var app = Elm.Main.init({
             node: document.getElementById('myapp'),
             flags: {
-                "answers": answers
+                "wordList": wordList
             }
         });
     </script>
