--- a/index.html
+++ b/index.html
@@ -10,19 +10,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
     <script src="wordListEnglish.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="/main.js"></script>
 </head>
 
 <body>
-    <div id="myapp"></div>
-    <script>
-        var app = Elm.Main.init({
-            node: document.getElementById('myapp'),
-            flags: {
-                "wordList": wordList
-            }
-        });
-    </script>
+    <div id="app"></div>
 </body>
 
 </html>
